# Disaster_Response

./: .gitignore  README.md  etl_pipeline.py  index.html  ml_pipeline.py  pyproject.toml
app/: run.py
app/templates/: master.html
data/: X_test.pkl  X_train.pkl  Y_test.pkl  process_data.py
models/: train_classifier.py
