[tool.poetry]
name = "disaster_response"
version = "0.1.0"
description = ""
authors = ["elenacramer <elenascramer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.2.0"
sklearn = "^0.0"
pandas = "^1.2.3"
nltk = "^3.5"
SQLAlchemy = "^1.4.2"
Flask = "^1.1.2"
plotly = "^4.14.3"
joblib = "^1.0.1"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
